--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             </div>
             <div class="hero-content">
                 <div class="hero-text-overlay">
-                    <h1 class="hero-title">踏むだけだから、向き合える</h1>
-                    <p class="hero-subtitle">足元のAIシュライバーで、理想の診察を現実に</p>
+                    <h1 class="hero-title"><span class="highlight-text">踏むだけ</span>だから、<span class="highlight-text">向き合える</span></h1>
+                    <p class="hero-subtitle"><span class="highlight-text">足元のAIシュライバー</span>で、<span class="highlight-text">理想の診察</span>を現実に</p>
                 </div>
                 <div class="hero-cta">
-                    <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ、理想の診察をはじめる<br><span class="sub-text">（購入ページへ）</span></a>
+                    <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large with-subtext" target="_blank" rel="noopener noreferrer">今すぐ、理想の診察をはじめる<br><span class="sub-text">（購入ページへ）</span></a>
                 </div>
             </div>
         </div>
@@ -187,17 +187,17 @@
             <div class="steps">
                 <div class="step">
                     <div class="step-number">1</div>
-                    <h3>踏んで、録音開始！</h3>
+                    <h3>踏んで、<br>録音開始！</h3>
                     <p>診察開始時にフットスイッチを1回踏むだけ</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
-                    <h3>踏んで、録音停止！</h3>
+                    <h3>踏んで、<br>録音停止！</h3>
                     <p>診察終了時にもう1回踏んで自動でAI要約</p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
-                    <h3>踏んで、転記！</h3>
+                    <h3>踏んで、<br>転記！</h3>
                     <p>Alt+フットスイッチでカルテに簡単転記</p>
                 </div>
             </div>
@@ -214,21 +214,21 @@
                         <i class="fas fa-heart"></i>
                     </div>
                     <h3>患者との時間</h3>
-                    <p>キーボードから解放され、患者さんとの対話に100%集中。信頼関係が深まり、診察の質が向上します。</p>
+                    <p>キーボードから解放され、患者さんとの対話に100%集中。<br>信頼関係が深まり、診察の質が向上します。</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-clock"></i>
                     </div>
                     <h3>自分の時間</h3>
-                    <p>カルテ入力時間を50%以上削減。診療後の残業がほぼゼロになり、プライベートな時間を取り戻せます。</p>
+                    <p>カルテ入力時間を50%以上削減。<br>診療後の残業がほぼゼロになり、プライベートな時間を取り戻せます。</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>院内の時間</h3>
-                    <p>スプレッドシートでのリアルタイム共有により、スタッフの電子カルテ記載作業も効率化されます。</p>
+                    <p>スプレッドシートでのリアルタイム共有により、<br>スタッフの電子カルテ記載作業も効率化されます。</p>
                 </div>
             </div>
         </div>
@@ -392,17 +392,18 @@
         <div class="container">
             <h2 class="section-title">理想の診察、今日からはじめませんか？</h2>
             <p class="closing-text">
-                カルステップは、あなたが医師として大切にしたい「患者さんとの時間」を取り戻します。<br>
-                もう記録業務に悩む必要はありません。今すぐ、理想の診察をはじめましょう。
+                カルステップは、あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
+                もう記録業務に悩む必要はありません。<br>今すぐ、理想の診察をはじめましょう。
             </p>
             <div class="closing-cta">
-                <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ、理想の診察をはじめる</a>
-                <button class="cta-button secondary large">資料請求（無料）</button>
+                <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
+                <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
             </div>
             <div class="contact-info">
                 <p>お気軽にお問い合わせください</p>
-                <p><i class="fas fa-envelope"></i> info@karustep.com</p>
-                <p><i class="fas fa-phone"></i> サポート：チャット・Web面談対応</p>
+                <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
+                <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
+                <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談対応</p>
             </div>
         </div>
     </section>
@@ -411,42 +412,13 @@
     <div id="sticky-footer" class="sticky-footer">
         <div class="sticky-footer-content">
             <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
-            <button class="cta-button secondary large">お問い合わせ</button>
+            <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
         </div>
     </div>
 
 
 
-    <!-- 資料請求モーダル -->
-    <div id="contact-modal" class="modal">
-        <div class="modal-content">
-            <span class="modal-close">&times;</span>
-            <h2 class="modal-title">資料請求フォーム</h2>
-            <form id="contact-form" class="modal-form">
-                <div class="form-group">
-                    <label for="contact-clinic-name">医院名 <span class="required">*</span></label>
-                    <input type="text" id="contact-clinic-name" name="clinic-name" required>
-                </div>
-                <div class="form-group">
-                    <label for="contact-doctor-name">お名前 <span class="required">*</span></label>
-                    <input type="text" id="contact-doctor-name" name="doctor-name" required>
-                </div>
-                <div class="form-group">
-                    <label for="contact-email">メールアドレス <span class="required">*</span></label>
-                    <input type="email" id="contact-email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="contact-phone">電話番号</label>
-                    <input type="tel" id="contact-phone" name="phone">
-                </div>
-                <div class="form-group">
-                    <label for="contact-message">ご質問・ご要望</label>
-                    <textarea id="contact-message" name="message" rows="4"></textarea>
-                </div>
-                <button type="submit" class="cta-button primary large">資料を請求する</button>
-            </form>
-        </div>
-    </div>
+
 
     <!-- GSAP CDN -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
