--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <meta name="keywords" content="医療,AIシュライバー,カルテ,電子カルテ,医師,診察,フットスイッチ,音声認識,自動要約,医療DX">
         <meta name="author" content="カルステップ">
         <meta name="robots" content="index, follow">
-        <link rel="canonical" href="https://karustep.github.io">
+        <link rel="canonical" href="https://mjs-com.github.io/karustep-LP/">
 
         <!-- OGP Meta Tags -->
         <meta property="og:title" content="カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー">
         <meta property="og:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://karustep.github.io">
-        <meta property="og:image" content="https://karustep.github.io/img/karustep-hero-img.jpg">
+        <meta property="og:url" content="https://mjs-com.github.io/karustep-LP/">
+        <meta property="og:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
         <meta property="og:site_name" content="カルステップ">
         <meta property="og:locale" content="ja_JP">
 
@@ -23,7 +23,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="カルステップ｜踏むだけだから、向き合える。医療支援AIシュライバー">
         <meta name="twitter:description" content="フットスイッチ操作による医療支援AIシュライバー「カルステップ」。足で踏むだけでハンズフリー録音・AI要約・自動転記。医師の理想の診察を実現します。">
-        <meta name="twitter:image" content="https://karustep.github.io/img/karustep-hero-img.jpg">
+        <meta name="twitter:image" content="https://mjs-com.github.io/karustep-LP/img/ogp-img.jpg">
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="img/karustep-logo.png">
