--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
             margin-bottom: 1rem;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             gap: 1rem;
         }
         
@@ -262,6 +262,10 @@
             
                             <div class="contact-info">
                     <h3>その他のお問い合わせ方法</h3>
+                    <p>
+                        <i class="fas fa-globe"></i>
+                        <a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a>
+                    </p>
                     <p>
                         <i class="fas fa-envelope"></i>
                         <a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a>
