--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="problem-item">
                     <i class="fas fa-check-circle"></i>
-                    <p>パソコンが苦手で、文字入力自体がストレスになっている</p>
+                    <p>パソコンが苦手で、文字入力がストレスになっている</p>
                 </div>
                 <div class="problem-item">
                     <i class="fas fa-check-circle"></i>
@@ -192,20 +192,20 @@
                     <div class="before">
                         <h3>これまで</h3>
                         <img src="img/before-using-karustep.png" alt="キーボードに縛られた診察" loading="lazy">
-                        <p>手がキーボードに縛られて<br>患者さんと向き合えない</p>
+                        <p>手がキーボードに縛られて、患者さんと向き合えない</p>
                     </div>
                     <div class="arrow">
-                        <i class="fas fa-arrow-right"></i>
+                        <img src="img/right-arrow.png" alt="矢印" loading="lazy">
                     </div>
                     <div class="after">
                         <h3>カルステップなら</h3>
                         <img src="img/after-using-karustep.jpg" alt="患者と向き合う理想の診察" loading="lazy">
-                        <p>足元のフットスイッチで<br>患者さんとしっかり向き合える</p>
+                        <p>足元のフットスイッチで、<br>患者さんとしっかり向き合える</p>
                     </div>
                 </div>
                 <div class="solution-intro">
                     <img src="img/karustep-logo-with-title.png" alt="カルステップロゴ" class="logo" loading="lazy">
-                    <p class="solution-description">フットスイッチ操作による医療支援AIシュライバーが、<br>あなたの診察を変える。</p>
+                    <p class="solution-description">フットスイッチ操作による診察音声要約AIが、<br>あなたの診察を変える。</p>
                 </div>
             </div>
         </div>
@@ -223,19 +223,97 @@
             </div>
             <div class="steps">
                 <div class="step">
-                    <div class="step-number">1</div>
-                    <h3>踏んで、<br>録音開始！</h3>
+                    <div class="step-header">
+                        <div class="step-number">1</div>
+                        <h3>踏んで、録音開始！</h3>
+                    </div>
                     <p>診察開始時にフットスイッチを1回踏むだけ</p>
                 </div>
                 <div class="step">
-                    <div class="step-number">2</div>
-                    <h3>踏んで、<br>録音停止！</h3>
+                    <div class="step-header">
+                        <div class="step-number">2</div>
+                        <h3>踏んで、録音停止！</h3>
+                    </div>
                     <p>診察終了時にもう1回踏んで自動でAI要約</p>
                 </div>
                 <div class="step">
-                    <div class="step-number">3</div>
-                    <h3>踏んで、<br>転記！</h3>
+                    <div class="step-header">
+                        <div class="step-number">3</div>
+                        <h3>踏んで、転記！</h3>
+                    </div>
                     <p>Alt+フットスイッチでカルテに簡単転記</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- スプレッドシート共有 -->
+    <section id="spreadsheet" class="spreadsheet">
+        <div class="container">
+            <h2 class="section-title">院内リアルタイム共有システム</h2>
+            <div class="spreadsheet-content">
+                <div class="spreadsheet-image">
+                    <img src="img/spread-sheet-img.png" alt="スプレッドシートでのリアルタイム共有" loading="lazy">
+                </div>
+                <div class="spreadsheet-description">
+                    <h3>診察内容が瞬時にスプレッドシートに反映</h3>
+                    <p>シュライバーや医療事務が別室からでも確認でき、<br>
+                    カルテ作成を同時進行できます。<br>
+                    チーム医療を強力にサポートし、効率的な診療体制を実現します。</p>
+                    <div class="feature-points">
+                        <div class="feature-point">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>セキュアな院内専用アクセス</span>
+                        </div>
+                        <div class="feature-point">
+                            <i class="fas fa-sync-alt"></i>
+                            <span>リアルタイム自動更新</span>
+                        </div>
+                        <div class="feature-point">
+                            <i class="fas fa-users-cog"></i>
+                            <span>チーム医療を強力サポート</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="security-info">
+                    <h3>安心のセキュリティ体制</h3>
+                    <p>3省2ガイドライン準拠の万全なセキュリティ体制で、<br>安心してご利用いただけます。</p>
+                    <div class="security-logos">
+                        <img src="img/microsoft-logo.png" alt="Microsoft Azure" loading="lazy">
+                        <img src="img/Google_Cloud_logo.png" alt="Google Cloud" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Chrome拡張機能 -->
+    <section id="chrome-extension" class="chrome-extension">
+        <div class="container">
+            <h2 class="section-title">Chrome拡張機能「コピペ for カルステップ」</h2>
+            <div class="chrome-extension-content">
+                <div class="chrome-extension-image">
+                    <img src="img/google-kakuchokinou-img.png" alt="Chrome拡張機能でワンクリックコピー" loading="lazy">
+                </div>
+                <div class="chrome-extension-description">
+                    <h3>ワンクリックで診察要約文をコピー</h3>
+                    <p>別PCでの電カルへの転記作業が劇的にスピードアップ。<br>
+                        シュライバーの作業効率も劇的に高まります！<br>
+                    こちらのサービスは無料でご利用いただけます。</p>
+                    <div class="feature-points">
+                        <div class="feature-point">
+                            <i class="fas fa-mouse-pointer"></i>
+                            <span>ワンクリックでコピー完了</span>
+                        </div>
+                        <div class="feature-point">
+                            <i class="fas fa-rocket"></i>
+                            <span>転記時間を最大80%削減</span>
+                        </div>
+                        <div class="feature-point">
+                            <i class="fas fa-gift"></i>
+                            <span>無料でご利用可能</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -258,7 +336,7 @@
                         <i class="fas fa-clock"></i>
                     </div>
                     <h3>自分の時間</h3>
-                    <p>カルテ入力時間を50%以上削減。<br>診療後の残業がほぼゼロになり、プライベートな時間を取り戻せます。</p>
+                    <p>カルテ入力時間を50%以上削減。<br>診療後の残業がなくなり、プライベートな時間を取り戻せます。</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
@@ -277,28 +355,44 @@
             <h2 class="section-title">導入された先生方の声</h2>
             <div class="testimonial-grid">
                 <div class="testimonial-card">
-                    <img src="img/demo-doctor1.png" alt="導入医師" loading="lazy">
-                    <blockquote>"患者さんの目を見て話せる時間が劇的に増えました"</blockquote>
-                    <cite>内科クリニック 院長</cite>
+                    <div class="testimonial-header">
+                        <img src="img/demo-doctor3.png" alt="導入医師" loading="lazy">
+                        <div class="testimonial-profile">
+                            <h4 class="doctor-name">高杉浩司 先生</h4>
+                            <p class="clinic-name">豊田土橋リウマチクリニック</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-content">
+                        <p>患者さんの目を見て話せる時間が劇的に増えました。<br>その上、電子カルテの記録時間も大幅に削減できています。</p>
+                    </div>
                 </div>
                 <div class="testimonial-card">
-                    <img src="img/demo-doctor2.png" alt="導入医師" loading="lazy">
-                    <blockquote>"記録業務のストレスから完全に解放されました"</blockquote>
-                    <cite>整形外科クリニック 院長</cite>
+                    <div class="testimonial-header">
+                        <img src="img/demo-doctor1.png" alt="導入医師" loading="lazy">
+                        <div class="testimonial-profile">
+                            <h4 class="doctor-name">谷村裕嗣 先生</h4>
+                            <p class="clinic-name">谷村皮フ科</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-content">
+                        <p>診察内容と進捗をリアルタイムで院内共有できるのがとても便利です。<br>医師とスタッフ間のディスコミュニケーションが減りました。</p>
+                    </div>
                 </div>
                 <div class="testimonial-card">
-                    <img src="img/demo-doctor3.png" alt="導入医師" loading="lazy">
-                    <blockquote>"PCが苦手でも簡単に使えて、診察に集中できます"</blockquote>
-                    <cite>皮膚科クリニック 院長</cite>
+                    <div class="testimonial-header">
+                        <img src="img/demo-doctor2.png" alt="導入医師" loading="lazy">
+                        <div class="testimonial-profile">
+                            <h4 class="doctor-name">久賀宣幸 先生</h4>
+                            <p class="clinic-name">くが眼科医院</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-content">
+                        <p>病状説明をカルステップに要約してもらった後、縮小印刷して紙カルテに貼っています。<br>今まで以上に正確に診察内容を記録できるようになりました。</p>
+                    </div>
                 </div>
             </div>
-            <div class="security-info">
-                <h3>安心のセキュリティ</h3>
-                <p>3省2ガイドライン準拠の万全なセキュリティ体制</p>
-                <div class="security-logos">
-                    <img src="img/microsoft-logo.png" alt="Microsoft Azure" loading="lazy">
-                    <img src="img/Google_Cloud_logo.png" alt="Google Cloud" loading="lazy">
-                </div>
+            <div class="testimonial-cta">
+                <a href="reviews.html" class="cta-button secondary">さらに詳しい導入医師の声を見る<br>（インタビュー動画あり）</a>
             </div>
         </div>
     </section>
@@ -366,7 +460,7 @@
                             <p>USBフットスイッチ</p>
                         </div>
                         <div class="item">
-                            <img src="img/item2_microphone.jpg" alt="集音マイク" loading="lazy">
+                            <img src="img/item2_microphone.png" alt="集音マイク" loading="lazy">
                             <p>集音マイク</p>
                         </div>
                     </div>
@@ -424,26 +518,27 @@
         </div>
     </section>
 
-    <!-- 10. クロージング（最終行動喚起） -->
-    <section id="closing" class="closing">
-        <div class="container">
-            <h2 class="section-title">理想の診察、今日からはじめませんか？</h2>
-            <p class="closing-text">
-                カルステップは、あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
-                もう記録業務に悩む必要はありません。<br>今すぐ、理想の診察をはじめましょう。
-            </p>
-            <div class="closing-cta">
-                <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
-                <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
-            </div>
-            <div class="contact-info">
-                <p>お気軽にお問い合わせください</p>
-                <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
-                <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
-                <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談対応</p>
-            </div>
+   <!-- 10. クロージング（最終行動喚起） -->
+   <section id="closing" class="closing">
+    <div class="container">
+        <h2 class="section-title">理想の診察、今日からはじめませんか？</h2>
+        <p class="closing-text">
+            カルステップは、あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
+            もう記録業務に悩む必要はありません。<br>今すぐ、理想の診察をはじめましょう。
+        </p>
+        <div class="closing-cta">
+            <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
+            <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
         </div>
-    </section>
+        <div class="contact-info">
+            <p>お気軽にお問い合わせください</p>
+            <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
+            <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
+            <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
+            <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談対応</p>
+        </div>
+    </div>
+</section>
 
     <!-- スティッキーフッター（追従CTA） -->
     <div id="sticky-footer" class="sticky-footer">
