--- a/reviews.html
+++ b/reviews.html
@@ -44,26 +44,33 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="reviews-header">
-        <div class="container">
-            <div class="reviews-header-content">
-                <a href="index.html" class="logo-link">
-                    <img src="img/karustep-logo-with-title.png" alt="カルステップ" class="reviews-logo">
+    <header class="header">
+        <div class="header-container">
+            <div class="header-logo">
+                <a href="index.html">
+                    <img src="img/karustep-logo-with-title.png" alt="カルステップ" loading="eager">
                 </a>
-                <nav class="reviews-nav">
-                    <a href="index.html#testimonials" class="nav-link">メインページに戻る</a>
-                </nav>
             </div>
+            <nav class="header-nav">
+                <a href="index.html" class="nav-link">ホーム</a>
+                <a href="contact.html" class="nav-link">お問い合わせ</a>
+                <a href="reviews.html" class="nav-link">導入事例</a>
+                <a href="recomended-machine.html" class="nav-link">推奨環境</a>
+            </nav>
         </div>
     </header>
+
+    <!-- ページタイトルセクション -->
+    <section class="page-title-section">
+        <div class="container">
+            <h1 class="page-title">導入医師の声・レビュー</h1>
+            <p class="page-subtitle">カルステップを実際に導入された医師の方々から、<br>詳しい使用感や効果についてお聞きしました</p>
+        </div>
+    </section>
 
     <!-- Main Content -->
     <main class="reviews-main">
         <div class="container">
-            <div class="reviews-intro">
-                <h1 class="reviews-title">導入医師の声・レビュー</h1>
-                <p class="reviews-subtitle">カルステップを実際に導入された医師の方々から、<br>詳しい使用感や効果についてお聞きしました</p>
-            </div>
 
             <!-- インタビュー動画セクション -->
             <section class="interview-videos">
@@ -99,7 +106,7 @@
                 <div class="review-cards">
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="img/demo-doctor3.png" alt="導入医師" loading="lazy">
+                            <img src="img/dr-takasugi.png" alt="導入医師" loading="lazy">
                             <div class="review-profile">
                                 <h3 class="doctor-name">高杉浩司 先生</h3>
                                 <p class="clinic-name">豊田土橋リウマチクリニック</p>
@@ -130,7 +137,7 @@
 
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="img/demo-doctor1.png" alt="導入医師" loading="lazy">
+                            <img src="img/dr-tanimura.jpeg" alt="導入医師" loading="lazy">
                             <div class="review-profile">
                                 <h3 class="doctor-name">谷村裕嗣 先生</h3>
                                 <p class="clinic-name">谷村皮フ科</p>
@@ -161,7 +168,7 @@
 
                     <div class="review-card">
                         <div class="review-header">
-                            <img src="img/demo-doctor2.png" alt="導入医師" loading="lazy">
+                            <img src="img/dr-kuga.jpg" alt="導入医師" loading="lazy">
                             <div class="review-profile">
                                 <h3 class="doctor-name">久賀宣幸 先生</h3>
                                 <p class="clinic-name">くが眼科医院</p>
@@ -170,7 +177,7 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
                                 </div>
                             </div>
                         </div>
@@ -190,26 +197,12 @@
                         </div>
                     </div>
                 </div>
-            </section>
+                        </section>
 
             <!-- まとめセクション -->
             <section class="reviews-summary">
                 <h2 class="section-title">導入医師の声まとめ</h2>
                 <div class="summary-content">
-                    <div class="summary-stats">
-                        <div class="stat-item">
-                            <div class="stat-number">100%</div>
-                            <div class="stat-label">満足度</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">50%</div>
-                            <div class="stat-label">記録時間削減</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">3日</div>
-                            <div class="stat-label">平均習得期間</div>
-                        </div>
-                    </div>
                     <div class="summary-text">
                         <p>実際に導入された医師の皆様から、「患者さんとの時間が増えた」「記録業務が効率化された」「診察の質が向上した」など、多くのポジティブな声をいただいています。</p>
                         <p>カルステップは、医師の理想の診察を実現するためのツールとして、着実に成果を上げています。</p>
