モバイル版ひとまず完成

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <div class="before">
                         <h3>これまで</h3>
                         <img src="img/before-using-karustep.png" alt="キーボードに縛られた診察" loading="lazy">
-                        <p>手がキーボードに縛られて、患者さんと向き合えない</p>
+                        <p>手がキーボードに縛られて、<br class="mobile-only">患者さんと向き合えない</p>
                     </div>
                     <div class="arrow">
                         <img src="img/right-arrow.png" alt="矢印" loading="lazy">
@@ -214,7 +214,7 @@
     <!-- 4. カルステップとは？（How it Works） -->
     <section id="how-it-works" class="how-it-works">
         <div class="container">
-            <h2 class="section-title">たったこれだけ、カルステップの使い方 3step</h2>
+            <h2 class="section-title">たったこれだけ、<br class="mobile-only">カルステップの使い方 3step</h2>
             <div class="demo-video">
                 <video autoplay muted loop>
                     <source src="img/short-demo.mp4" type="video/mp4">
@@ -256,10 +256,10 @@
                     <img src="img/spread-sheet-img.png" alt="スプレッドシートでのリアルタイム共有" loading="lazy">
                 </div>
                 <div class="spreadsheet-description">
-                    <h3>診察内容が瞬時にスプレッドシートに反映</h3>
+                    <h3>診察内容が瞬時に<br class="mobile-only">スプレッドシートに反映</h3>
                     <p>シュライバーや医療事務が別室からでも確認でき、<br>
                     カルテ作成を同時進行できます。<br>
-                    チーム医療を強力にサポートし、効率的な診療体制を実現します。</p>
+                    チーム医療を強力にサポートし、<br class="mobile-only">効率的な診療体制を実現します。</p>
                     <div class="feature-points">
                         <div class="feature-point">
                             <i class="fas fa-shield-alt"></i>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="security-info">
                     <h3>安心のセキュリティ体制</h3>
-                    <p>3省2ガイドライン準拠の万全なセキュリティ体制で、<br>安心してご利用いただけます。</p>
+                    <p>3省2ガイドライン準拠の<br class="mobile-only">万全なセキュリティ体制で、<br>安心してご利用いただけます。</p>
                     <div class="security-logos">
                         <img src="img/microsoft-logo.png" alt="Microsoft Azure" loading="lazy">
                         <img src="img/Google_Cloud_logo.png" alt="Google Cloud" loading="lazy">
@@ -290,7 +290,7 @@
     <!-- Chrome拡張機能 -->
     <section id="chrome-extension" class="chrome-extension">
         <div class="container">
-            <h2 class="section-title">Chrome拡張機能「コピペ for カルステップ」</h2>
+            <h2 class="section-title">Chrome拡張機能<br class="mobile-only">「コピペ for カルステップ」</h2>
             <div class="chrome-extension-content">
                 <div class="chrome-extension-image">
                     <img src="img/google-kakuchokinou-img.png" alt="Chrome拡張機能でワンクリックコピー" loading="lazy">
@@ -322,28 +322,28 @@
     <!-- 5. 導入後の未来（ベネフィット） -->
     <section id="benefits" class="benefits">
         <div class="container">
-            <h2 class="section-title">カルステップがもたらす、3つの時間革命</h2>
+            <h2 class="section-title">カルステップがもたらす、<br class="mobile-only">3つの時間革命</h2>
             <div class="benefits-grid">
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-heart"></i>
                     </div>
                     <h3>患者との時間</h3>
-                    <p>キーボードから解放され、患者さんとの対話に100%集中。<br>信頼関係が深まり、診察の質が向上します。</p>
+                    <p>キーボードから解放され、<br class="mobile-only">患者さんとの対話に100%集中。<br>信頼関係が深まり、診察の質が向上します。</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-clock"></i>
                     </div>
                     <h3>自分の時間</h3>
-                    <p>カルテ入力時間を50%以上削減。<br>診療後の残業がなくなり、プライベートな時間を取り戻せます。</p>
+                    <p>カルテ入力時間を50%以上削減。<br>診療後の残業がなくなり、<br class="mobile-only">プライベートな時間を取り戻せます。</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>院内の時間</h3>
-                    <p>スプレッドシートでのリアルタイム共有により、<br>スタッフの電子カルテ記載作業も効率化されます。</p>
+                    <p>スプレッドシートでの<br class="mobile-only">リアルタイム共有により、<br>コミュニケーションエラーが減ります。</p>
                 </div>
             </div>
         </div>
@@ -400,7 +400,7 @@
     <!-- 7. 選ばれる理由（USP） -->
     <section id="usp" class="usp">
         <div class="container">
-            <h2 class="section-title">カルステップが、賢い先生に選ばれる3つの理由</h2>
+            <h2 class="section-title">カルステップが、<br class="mobile-only">賢い先生に選ばれる3つの理由</h2>
             <div class="usp-grid">
                 <div class="usp-card">
                     <h3><i class="fas fa-yen-sign"></i> 圧倒的なコストパフォーマンス</h3>
@@ -472,8 +472,8 @@
                     </div>
                 </div>
                 <div class="running-cost">
-                    <p><strong>ランニングコスト：</strong>1分約1円（業界最安値）</p>
-                    <p><small>※ユーザー様がMicrosoft Azureと直接契約（契約無料）<br>当社によるカルステップ導入およびAzure契約サポートあり</small></p>
+                    <p><strong>ランニングコスト：</strong><br class="mobile-only">1分約1円（業界最安値）</p>
+                    <p><small>※ユーザー様がMicrosoft Azureと直接契約（契約無料）<br>当社によるカルステップ導入<span class="mobile-only">サポート</span><br class="mobile-only">および<span class="mobile-only">、</span>Azure契約サポートあり</small></p>
                 </div>
             </div>
         </div>
@@ -537,9 +537,9 @@
    <!-- 10. クロージング（最終行動喚起） -->
    <section id="closing" class="closing">
     <div class="container">
-        <h2 class="section-title">理想の診察、今日から始めませんか？</h2>
+        <h2 class="section-title">理想の診察、<br class="mobile-only">今日から始めませんか？</h2>
         <p class="closing-text">
-            カルステップは、あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
+            カルステップは、<br class="mobile-only">あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
             もう記録業務に悩む必要はありません。<br>今すぐ、理想の診察をはじめましょう。
         </p>
         <div class="closing-cta">
@@ -547,7 +547,7 @@
             <a href="contact.html" class="cta-button secondary large">お問い合わせ</a>
         </div>
         <div class="contact-info">
-            <p>お気軽にお問い合わせください</p>
+            <h4>お気軽にお問い合わせください</h4>
             <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
             <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
             <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
