--- a/recomended-machine.html
+++ b/recomended-machine.html
@@ -65,7 +65,7 @@
         <section class="page-title-section">
             <div class="container">
                 <h1 class="page-title">推奨環境</h1>
-                <p class="page-subtitle">カルステップの動作に必要なシステム環境について</p>
+                <p class="page-subtitle">カルステップの動作に必要な<br class="mobile-only">システム環境について</p>
             </div>
         </section>
 
@@ -128,8 +128,8 @@
                         <h3><i class="fas fa-shield-alt"></i> セキュリティ要件</h3>
                         <ul>
                             <li>HTTPS通信対応</li>
-                            <li>Microsoft Azure（*.azure.com）へのアクセス許可</li>
-                            <li>Google Cloud（*.googleapis.com）へのアクセス許可</li>
+                            <li>Microsoft Azure<span class="desktop-only">（*.azure.com）</span>へのアクセス許可</li>
+                            <li>Google Cloud<span class="desktop-only">（*.googleapis.com）</span>へのアクセス許可</li>
                             <li>ファイアウォール設定での許可が必要な場合があります</li>
                         </ul>
                     </div>
@@ -258,7 +258,7 @@
     <footer class="footer">
         <div class="container">
             <div class="contact-info">
-                <h3 style="margin-bottom: 2rem;">その他のお問い合わせ方法</h3>
+                <h4 style="margin-bottom: 1rem;">その他のお問い合わせ方法</h4>
                 <p>
                     <i class="fas fa-globe"></i>
                     <a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a>
