--- a/reviews.html
+++ b/reviews.html
@@ -64,7 +64,7 @@
     <section class="page-title-section">
         <div class="container">
             <h1 class="page-title">導入医師の声・レビュー</h1>
-            <p class="page-subtitle">カルステップを実際に導入された医師の方々から、<br>詳しい使用感や効果についてお聞きしました</p>
+            <p class="page-subtitle">カルステップを実際に導入された医師の方々から、<br class="desktop-only">詳しい使用感や効果についてお聞きしました</p>
         </div>
     </section>
 
@@ -215,9 +215,9 @@
     <!-- 10. クロージング（最終行動喚起） -->
     <section id="closing" class="closing">
         <div class="container">
-            <h2 class="section-title">理想の診察、今日からはじめませんか？</h2>
+            <h2 class="section-title">理想の診察、<br class="mobile-only">今日からはじめませんか？</h2>
             <p class="closing-text">
-                カルステップは、あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
+                カルステップは、<br class="mobile-only">あなたが医師として大切にしたい<br>「患者さんとの時間」を取り戻します。<br>
                 もう記録業務に悩む必要はありません。<br>今すぐ、理想の診察をはじめましょう。
             </p>
             <div class="closing-cta">
@@ -225,7 +225,7 @@
                 <a href="index.html" class="cta-button secondary large">前のページに戻る</a>
             </div>
             <div class="contact-info">
-                <p>お気軽にお問い合わせください</p>
+                <h4>お気軽にお問い合わせください</h4>
                 <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
                 <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
                 <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
