モバイル版完成

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <!-- 3. 解決策の提示 -->
     <section id="solution" class="solution">
         <div class="container">
-            <h2 class="section-title">その悩み、原因は"手"にありました。</h2>
+            <h2 class="section-title">その悩み、<br class="mobile-only">原因は"手"にありました。</h2>
             <div class="solution-content">
                 <div class="before-after">
                     <div class="before">
@@ -227,7 +227,7 @@
                         <div class="step-number">1</div>
                         <h3>踏んで、<span class="text-green">録音開始！</span></h3>
                     </div>
-                    <p>診察開始時にフットスイッチを1回踏むだけ</p>
+                    <p>診察開始時に<span class="desktop-only">フット</span>スイッチを1回踏むだけ</p>
                 </div>
                 <div class="step">
                     <div class="step-header">
@@ -257,7 +257,7 @@
                 </div>
                 <div class="spreadsheet-description">
                     <h3>診察内容が瞬時に<br class="mobile-only">スプレッドシートに反映</h3>
-                    <p>シュライバーや医療事務が別室からでも確認でき、<br>
+                    <p>別室からでもスタッフが内容を確認でき、<br>
                     カルテ作成を同時進行できます。<br>
                     チーム医療を強力にサポートし、<br class="mobile-only">効率的な診療体制を実現します。</p>
                     <div class="feature-points">
@@ -329,7 +329,7 @@
                         <i class="fas fa-heart"></i>
                     </div>
                     <h3>患者との時間</h3>
-                    <p>キーボードから解放され、<br class="mobile-only">患者さんとの対話に100%集中。<br>信頼関係が深まり、診察の質が向上します。</p>
+                    <p>キーボードから解放され、<br class="mobile-only">患者さんとの対話に100%集中。<br>信頼関係が深まり<span class="desktop-only">、</span>診察の質が向上します。</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                     <div class="testimonial-content">
-                        <p>患者さんの目を見て話せる時間が増えました。<br>その上、電子カルテの記録時間も大幅に削減できています。</p>
+                        <p>患者さんの目を見て会話できる時間が増えました。<br>その上、電子カルテの記録時間も大幅に削減できています。</p>
                     </div>
                 </div>
                 <div class="testimonial-card">
@@ -473,7 +473,7 @@
                 </div>
                 <div class="running-cost">
                     <p><strong>ランニングコスト：</strong><br class="mobile-only">1分約1円（業界最安値）</p>
-                    <p><small>※ユーザー様がMicrosoft Azureと直接契約（契約無料）<br>当社によるカルステップ導入<span class="mobile-only">サポート</span><br class="mobile-only">および<span class="mobile-only">、</span>Azure契約サポートあり</small></p>
+                    <p><small>※ユーザー様がMicrosoft Azureと直接契約（<span class="desktop-only">契約</span>無料）</span><br>当社によるカルステップ導入<span class="mobile-only">サポート</span><br class="mobile-only">および<span class="mobile-only">、</span>Azure契約サポートあり</small></p>
                 </div>
             </div>
         </div>
@@ -551,7 +551,7 @@
             <p><i class="fas fa-globe"></i><a href="https://mjs-com.github.io/MJScompany/" target="_blank" rel="noopener noreferrer">会社ホームページ</a></p>
             <p><i class="fas fa-envelope"></i><a href="mailto:mjsc0mpa2@gmail.com">mjsc0mpa2@gmail.com</a></p>
             <p><i class="fa-brands fa-square-x-twitter"></i><a href="https://twitter.com/Dr_kurukuru" target="_blank" rel="noopener noreferrer">@Dr_kurukuru</a></p>
-            <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談対応</p>
+            <p><i class="fa-solid fa-headset"></i> サポート：チャット・Web面談<span class="desktop-only">対応</span></p>
         </div>
     </div>
 </section>
