--- a/recomended-machine.html
+++ b/recomended-machine.html
@@ -273,7 +273,7 @@
                 </p>
                 <p>
                     <i class="fa-solid fa-headset"></i>
-                    サポート：チャット・Web面談対応
+                    サポート：チャット・Web面談<span class="desktop-only">対応</span>
                 </p>
             </div>
         </div>
