--- a/reviews.html
+++ b/reviews.html
@@ -238,7 +238,7 @@
     <div id="sticky-footer" class="sticky-footer">
         <div class="sticky-footer-content">
             <a href="https://buy.stripe.com/4gM7sLeOVc0x7RL2av7ok00" class="cta-button primary large" target="_blank" rel="noopener noreferrer">今すぐ購入</a>
-            <a href="index.html" class="cta-button secondary large">メインページに戻る</a>
+            <a href="index.html" class="cta-button secondary large">ホームに戻る</a>
         </div>
     </div>
 
