インタビューまとめ動画追加

--- a/index.html
+++ b/index.html
@@ -353,6 +353,21 @@
     <section id="testimonials" class="testimonials">
         <div class="container">
             <h2 class="section-title">導入された先生方の声</h2>
+            
+            <!-- インタビュー動画 -->
+            <div class="interview-video">
+                <div class="video-container">
+                    <iframe 
+                        src="https://www.youtube.com/embed/Oiv_nc8LeSY" 
+                        title="カルステップ導入医師インタビュー動画" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen
+                        loading="lazy">
+                    </iframe>
+                </div>
+            </div>
+            
             <div class="testimonial-grid">
                 <div class="testimonial-card">
                     <div class="testimonial-header">
