プラ金先生コメント修正

--- a/reviews.html
+++ b/reviews.html
@@ -217,11 +217,11 @@
                         </div>
                         <div class="review-content">
                             <h4>術前の同意書作成に革命的な変化</h4>
-                            <p>特に非定型的な手術や、複雑な説明が必要な症例の術前ICで、カルステップは絶大な効果を発揮します。従来は説明後に一からPCで同意書を作成していましたが、40～50分かかることもありました。カルステップを使えば、患者さんと話した内容が即座にテキスト化されるため、それを確認・修正して印刷するだけで済みます。紙の同意書へのサインが必須な業務フローとも非常に相性が良いです。
+                            <p>特に非定型的な手術や、複雑な説明が必要な症例の術前ICで、カルステップは絶大な効果を発揮します。美容手術の際は、時に雑談を交えながら、具体的なお悩みや、その解決にどのようにアプローチするかなど時間を掛けてカウンセリングを行っています。カルステップを使えば、患者さんと話した内容がもれなく即座にテキスト化されるため、術前に再度お互いのイメージの確認、すりあわせをする際にもギャップがなくなり大変助かっています。
                             </p>
                             
                             <h4>美容医療での活用と患者満足度の向上</h4>
-                            <p>一人ひとりの患者様で説明内容が異なる美容医療のカウンセリングにおいて、非常に重宝しています。説明内容や術後の注意点をその場で印刷して渡せるので、患者様が後から見返すことができ、安心感と満足度の向上に繋がっていると感じます。また、これまで記録のために同席していたスタッフが不要になり、医師が患者様と向き合う時間に集中できるようになりました。</p>
+                            <p>一人ひとりの患者様で説明内容が異なる美容医療のカウンセリングにおいて、非常に重宝しています。説明内容や術後の注意点を必要に応じてその場で印刷して渡せるので、患者様が後から見返すことができ、安心感と満足度の向上に繋がっていると感じます。また、これまで同席していたスタッフが記録に集中することなく患者様の表情の変化などをくみ取り、質問を促すなど、医師が患者様とのコミュニケーションの円滑化にも貢献できるようになりました。</p>
                             
                             <h4>特に評価している点</h4>
                             <ul>
